@@ -6,26 +6,65 @@
 
  ------------------------------------------------------------- */
 
-#include <knuminput.h>
 #include <klocale.h>
-
-#include <qwidget.h>
 #include <qlabel.h>
 #include <qlayout.h>
 
 #include "timeedit.h"
 
 
+WrappingSpinBox::WrappingSpinBox(int minValue, int maxValue, int step, QWidget *parent, const char *name)
+	: QSpinBox(minValue, maxValue, step, parent, name)
+{
+}
+
+WrappingSpinBox::~WrappingSpinBox()
+{
+}
+
+
+/** Overloaded QSpinBox method */
+void WrappingSpinBox::stepUp()
+{
+	bool wrap = false;
+	if (value() == 59)
+		wrap = true;
+	if (wrap)
+		emit wrapUp();              // must wrap first (to avoid double-step-up)
+	QSpinBox::stepUp();
+}
+
+/** Overloaded QSpinBox method */
+void WrappingSpinBox::stepDown()
+{
+	bool wrap = false;
+	if (value() == 0)
+		wrap = true;
+	QSpinBox::stepDown();
+	if (wrap)
+		emit wrapDown();
+}
+
+
+// -------------------------------------------------------------------------
+
+
 TimeEdit::TimeEdit(QWidget* parent, const char* name)
     : QWidget(parent, name)
 {
 	layout = new QHBoxLayout(this);
-	minuteBox = new KIntSpinBox(0, 60, 1, 0, 10, this);
+	minuteBox = new QSpinBox(0, 300, 1, this);
+//	minuteBox->setFixedSize(minuteBox->sizeHint());
+
 	QLabel* min = new QLabel(i18n(" min"), this);
 	min->setFixedSize(min->sizeHint());
-	secondBox = new KIntSpinBox(0, 59, 1, 0, 10, this);
-	secondBox->setFixedSize(secondBox->sizeHint());
+	secondBox = new WrappingSpinBox(0, 59, 1, this);
+	secondBox->setWrapping(true);
+//	secondBox->setFixedSize(secondBox->sizeHint());
+
 	QLabel* sec = new QLabel(i18n(" sec"),this);
+	sec->setFixedSize(sec->sizeHint());
+
 	layout->addWidget(minuteBox);
 	layout->addWidget(min);
 
@@ -34,27 +73,53 @@ TimeEdit::TimeEdit(QWidget* parent, const char* name)
 
 	connect(minuteBox, SIGNAL(valueChanged(int)), SLOT(spinBoxValueChanged(int)) );
 	connect(secondBox, SIGNAL(valueChanged(int)), SLOT(spinBoxValueChanged(int)) );
+	connect(secondBox, SIGNAL(wrapUp()), SLOT(wrappedUp()));
+	connect(secondBox, SIGNAL(wrapDown()), SLOT(wrappedDown()));
 }
 
 TimeEdit::~TimeEdit()
 {
 }
 
+/** Set to specified number of seconds. */
 void TimeEdit::setValue(int value)
 {
 	if (value < 0)
 		return;
 	// FIXME: What does KSpinBox do if value is out of range?
 
-	secondBox->setValue(value % 60);    
+	secondBox->setValue(value % 60);
 	minuteBox->setValue(value / 60);
 }
 
+/** Return current value in seconds. */
 int TimeEdit::value()
 {
 	return minuteBox->value()*60 + secondBox->value();
 }
 
+/** SLOT: Handle wrap-up of seconds-box */
+void TimeEdit::wrappedUp()
+{
+	if (minuteBox->value() != minuteBox->maxValue()) {
+		minuteBox->stepUp();
+	} else {
+		secondBox->setValue(58);    // ugly: must cater for wrapping-first
+	}
+}
+
+/** SLOT: Handle wrap-down of seconds-box */
+void TimeEdit::wrappedDown()
+{
+	// well, the "if" should always be true
+	if (minuteBox->value() != minuteBox->minValue()) {
+		minuteBox->stepDown();
+	} else {
+		secondBox->setValue(0);
+	}
+}
+
+/** SLOT: Handle any change in minutes of seconds */
 void TimeEdit::spinBoxValueChanged(int v)
 {
 	if (this->value() == 0) {
@@ -62,8 +127,5 @@ void TimeEdit::spinBoxValueChanged(int v)
 		return;
 	}
 
-	// FIXME: decrement 'minutes' if 'seconds' are 0 and still decremented
-	//        (need to set KIntSpinBox's lower limit to -1 then?)
-
-    emit valueChanged(this->value());
+	emit valueChanged(this->value());
 }
