@@ -6,10 +6,27 @@
 
  ------------------------------------------------------------- */
 
+#include <qspinbox.h>
 #include <qwidget.h>
 
 class QBoxLayout;
-class KIntSpinBox;
+
+
+class WrappingSpinBox : public QSpinBox
+{
+	Q_OBJECT
+
+public:
+	WrappingSpinBox(int minValue, int maxValue, int step = 1, QWidget *parent=0, const char *name=0);
+	~WrappingSpinBox();
+
+	void stepUp();
+	void stepDown();
+
+signals:
+	void wrapUp();
+	void wrapDown();
+};
 
 
 class TimeEdit : public QWidget
@@ -24,14 +41,17 @@ public:
 	int value();
 
 
-private slots:     
+private slots:
 	void spinBoxValueChanged(int);
+	void wrappedUp();
+	void wrappedDown();
 
 signals:
-	void valueChanged(int); 
+	void valueChanged(int);
 
 
 protected:
-	KIntSpinBox *minuteBox, *secondBox;
+	QSpinBox *minuteBox;
+	WrappingSpinBox *secondBox;
 	QBoxLayout* layout;
 };
